styling home page

--- a/src/sass/navbar.scss
+++ b/src/sass/navbar.scss
@@ -19,8 +19,10 @@
     }
 
     .signup-btn {
+       padding: 0 10px;
      background-color: c.$main-yellow;
         border-radius: 8px;
+        line-height: 50px;
         font-weight: bold;
         color: #ffffff;
     }
