dashboard page styling for mobile devices

--- a/src/sass/dashboard.scss
+++ b/src/sass/dashboard.scss
@@ -1,6 +1,11 @@
 @use './reset';
 @use './colors' as c;
 
+
+.text-light-gray {
+	color: c.$light-gray;
+}
+
 .error {
 	border: 1px solid tomato;
 }
@@ -10,7 +15,9 @@
 }
 
 .numeric-days tr .active {
-	background-color: aqua;
+	background-color: rgb(231, 194, 29);
+	border-radius: 50%;
+	color: white;
 }
 
 .calendar-icon {
@@ -21,3 +28,205 @@
 .error-text {
 	font-size: 1.2rem;
 }
+
+.welcome-header {
+	font-size: 2rem;
+}
+
+.month-year {
+	font-size: 2rem;
+}
+
+.bigger-text {
+	margin-bottom: 20px;
+	font-size: 2.6rem;
+	line-height: 2.6rem;
+	font-weight: bold;
+}
+
+.add-todo-panel-btn {
+	height: 40px;
+	width: 130px;
+	border-radius: 8px;
+	font-size: 1.4rem;
+}
+
+.date{
+	padding: 8px;
+	margin: 8px;
+	font-size: 1.4rem;
+	text-align: center;
+	font-weight: bold;
+}
+
+.date {
+	width: 20px;
+}
+
+.week-day {
+	min-width: 40px;
+	min-height: 40px;
+	color: gray;
+	font-size: 1.3rem;
+	text-align: center;
+}
+
+.prev-month-day.date, .next-month-day.date {
+	color: c.$light-gray;
+}
+
+.switch-month-btn {
+	display: block;
+	width: 35px;
+	height: 35px;
+	background-color: c.$light-gray;
+	text-align: center;
+	transition: background-color .2s;
+}
+
+.switch-month-btn:hover {
+	background-color: #afaaaa;
+}
+
+.todo {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 10px;
+transition: background-color 0.2;
+}
+
+
+
+.todo-done {
+  background-color: rgba(255, 255, 0, 0.1);
+  
+  .todo-text-box {
+    .todo-title {
+      text-decoration: line-through;
+      font-style: italic;
+    }
+
+  }
+}
+.todo-text-box {
+	width: 130px;
+  
+}
+
+.todo-title {
+	font-size: 1.3rem;
+	font-weight: bold;
+}
+
+
+.todo-description {
+	font-size: 1.2rem;
+}
+
+.todo-title::first-letter, .todo-description::first-letter {
+	text-transform: uppercase;
+}
+
+  .checkbox-wrapper-4 * {
+    box-sizing: border-box;
+  }
+  .checkbox-wrapper-4 .cbx {
+    -webkit-user-select: none;
+    user-select: none;
+    cursor: pointer;
+    padding: 6px 8px;
+    border-radius: 6px;
+    overflow: hidden;
+    transition: all 0.2s ease;
+    display: inline-block;
+  }
+  .checkbox-wrapper-4 .cbx:not(:last-child) {
+    margin-right: 6px;
+  }
+  .checkbox-wrapper-4 .cbx:hover {
+    background: rgba(0,119,255,0.06);
+  }
+  .checkbox-wrapper-4 .cbx span {
+    float: left;
+    vertical-align: middle;
+    transform: translate3d(0, 0, 0);
+  }
+  .checkbox-wrapper-4 .cbx span:first-child {
+    position: relative;
+    width: 18px;
+    height: 18px;
+    border-radius: 4px;
+    transform: scale(1);
+    border: 1px solid #cccfdb;
+    transition: all 0.2s ease;
+    box-shadow: 0 1px 1px rgba(0,16,75,0.05);
+  }
+  .checkbox-wrapper-4 .cbx span:first-child svg {
+    position: absolute;
+    top: 3px;
+    left: 2px;
+    fill: none;
+    stroke: #fff;
+    stroke-width: 2;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke-dasharray: 16px;
+    stroke-dashoffset: 16px;
+    transition: all 0.3s ease;
+    transition-delay: 0.1s;
+    transform: translate3d(0, 0, 0);
+  }
+  .checkbox-wrapper-4 .cbx span:last-child {
+    padding-left: 8px;
+    line-height: 18px;
+  }
+  .checkbox-wrapper-4 .cbx:hover span:first-child {
+    border-color: c.$light-gray;
+  }
+  .checkbox-wrapper-4 .inp-cbx {
+    position: absolute;
+    visibility: hidden;
+  }
+  .checkbox-wrapper-4 .inp-cbx:checked + .cbx span:first-child {
+    background: c.$light-gray;
+    border-color: c.$light-gray;
+    animation: wave-4 0.4s ease;
+  }
+  .checkbox-wrapper-4 .inp-cbx:checked + .cbx span:first-child svg {
+    stroke-dashoffset: 0;
+  }
+  .checkbox-wrapper-4 .inline-svg {
+    position: absolute;
+    width: 0;
+    height: 0;
+    pointer-events: none;
+    user-select: none;
+  }
+  @media screen and (max-width: 640px) {
+    .checkbox-wrapper-4 .cbx {
+      width: 100%;
+      display: inline-block;
+    }
+  }
+  @-moz-keyframes wave-4 {
+    50% {
+      transform: scale(0.9);
+    }
+  }
+  @-webkit-keyframes wave-4 {
+    50% {
+      transform: scale(0.9);
+    }
+  }
+  @-o-keyframes wave-4 {
+    50% {
+      transform: scale(0.9);
+    }
+  }
+  @keyframes wave-4 {
+    50% {
+      transform: scale(0.9);
+    }
+  }
+
