--- a/src/sass/dashboard.scss
+++ b/src/sass/dashboard.scss
@@ -71,6 +71,14 @@
 	text-align: center;
 }
 
+.month-btns-box {
+  max-width: 280px;
+}
+
+.month-year-box {
+  max-width: 290px;
+}
+
 .prev-month-day.date, .next-month-day.date {
 	color: c.$light-gray;
 }
@@ -96,8 +104,6 @@
 transition: background-color 0.2;
 }
 
-
-
 .todo-done {
   background-color: rgba(255, 255, 0, 0.1);
   
@@ -115,12 +121,14 @@ transition: background-color 0.2;
 }
 
 .todo-title {
+  word-wrap: break-word;
 	font-size: 1.3rem;
 	font-weight: bold;
 }
 
 
 .todo-description {
+  word-wrap: break-word;
 	font-size: 1.2rem;
 }
 
@@ -230,3 +238,19 @@ transition: background-color 0.2;
     }
   }
 
+
+  @media (min-width: 567px) {
+    .todo {
+      width: 500px;
+    }
+    .todo-text-box, .todo-description {
+      width: 230px;
+    }
+  }
+
+
+  @media (min-width: 768px) {
+    .todo {
+      width: 430px;
+    }
+  }
