--- a/src/sass/dashboard.scss
+++ b/src/sass/dashboard.scss
@@ -10,6 +10,11 @@
 	border: 1px solid tomato;
 }
 
+.profile-icon {
+  width: 40px;
+  height: 40px;
+}
+
 .numeric-days tr td {
 	cursor: pointer;
 }
@@ -34,18 +39,19 @@
 }
 
 .month-year {
-	font-size: 2rem;
+	font-size: 1.8rem;
+  color: #797979;
 }
 
 .bigger-text {
 	margin-bottom: 20px;
-	font-size: 2.6rem;
-	line-height: 2.6rem;
+	font-size: 2.5rem;
+	line-height: 2.5rem;
 	font-weight: bold;
 }
 
 .add-todo-panel-btn {
-	height: 40px;
+	height: 45px;
 	width: 130px;
 	border-radius: 8px;
 	font-size: 1.4rem;
@@ -76,7 +82,7 @@
 }
 
 .month-year-box {
-  max-width: 290px;
+  max-width: 300px;
 }
 
 .prev-month-day.date, .next-month-day.date {
