--- a/src/sass/dashboard.scss
+++ b/src/sass/dashboard.scss
@@ -42,15 +42,14 @@
 	z-index: 10;
 }
 
-
 .dashboard-nav-btn {
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 10px;
-  border: none;
-  background-color: transparent;
-  z-index: 999;
+	position: absolute;
+	top: 0;
+	left: 0;
+	padding: 10px;
+	border: none;
+	background-color: transparent;
+	z-index: 999;
 }
 
 .dashboard-nav-box {
@@ -58,13 +57,12 @@
 	width: 0;
 	height: 100%;
 	background-color: white;
-  overflow: hidden;
-  transition: width 0.2s;
+	overflow: hidden;
+	transition: width 0.2s;
 	z-index: 99;
-  
-  
+
 	.dashboard-nav {
-    display: flex;
+		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
@@ -73,7 +71,7 @@
 		padding: 0;
 		list-style-type: none;
 
-		li {
+		.dashboard-nav-link {
 			display: flex;
 			justify-content: left;
 			align-items: center;
@@ -81,15 +79,16 @@
 			padding: 15px 20px;
 			text-align: left;
 			font-size: 1.4rem;
-      font-weight: 500;
-      
+			font-weight: 500;
+			cursor: pointer;
+
 			span {
-        margin-left: 10px;
+				margin-left: 10px;
 			}
 		}
-    
-		li.active {
-      background-color: #212529;
+
+		.dashboard-nav-link.active {
+			background-color: #212529;
 			color: rgb(240, 240, 240);
 			border-top-right-radius: 10px;
 			border-bottom-right-radius: 10px;
@@ -97,11 +96,19 @@
 	}
 }
 .dashboard-nav-box.active {
-  width: 150px;
+	width: 150px;
+}
+
+.settings-section {
+	position: absolute;
+	inset: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #fff;
 }
 
 .search-box {
-  display: flex;
+	display: flex;
 	justify-content: center;
 	align-items: center;
 	height: 50px;
@@ -226,19 +233,17 @@
 
 .todo-list-wrapper::-webkit-scrollbar {
 	width: 4px; /* Szerokość paska */
-  }
-  
-  .todo-list-wrapper::-webkit-scrollbar-thumb {
+}
+
+.todo-list-wrapper::-webkit-scrollbar-thumb {
 	background-color: c.$main-yellow; /* Kolor kciuka */
 	border-radius: 6px; /* Zakrąglenie kciuka */
 	margin-left: 10px;
-  }
-  
-  .todo-list-wrapper::-webkit-scrollbar-track {
-	background-color: rgba($color: #817e7e, $alpha: 0.2); /* Kolor toru przewijania */
-  }
-  
+}
 
+.todo-list-wrapper::-webkit-scrollbar-track {
+	background-color: rgba($color: #817e7e, $alpha: 0.2); /* Kolor toru przewijania */
+}
 
 .todo {
 	margin-right: 20px;
@@ -282,6 +287,49 @@
 			font-style: italic;
 		}
 	}
+}
+
+.icon-form {
+	cursor: pointer;
+
+	.profile-image-label {
+		position: relative;
+
+		.settings-profile-icon {
+			width: 140px;
+			height: 140px;
+			border-radius: 50%;
+		}
+
+		.edit-icon {
+			position: absolute;
+			left: 5px;
+			bottom: 10px;
+			padding: 5px 10px;
+			color: white;
+			font-size: 1.2rem;
+			background-color: black;
+			border-radius: 8px;
+		}
+	}
+	input[type='file'] {
+		opacity: 0;
+	}
+}
+
+.change-pwd-box {
+	.settings-btn {
+		padding: 10px 20px;
+		font-size: 1.3rem;
+	}
+}
+
+.settings-h3 {
+	margin: 30px 0;
+	padding-bottom: 10px;
+	font-size: 2rem;
+	font-weight: 500;
+	border-bottom: 0.5px solid rgba($color: #000000, $alpha: 0.3);
 }
 
 .checkbox-wrapper-4 * {
@@ -387,68 +435,68 @@
 }
 
 @media (min-width: 576px) {
-.todo {
-  .todo-text-box {
-		width: 60%;
+	.todo {
+		.todo-text-box {
+			width: 60%;
+		}
+	}
+
+	.profile-box {
+		align-items: top;
+		width: 200px;
+		right: 40px;
+		.profile-name {
+			display: block;
+			padding-left: 10px;
+			font-size: 1.4rem;
+			font-weight: 500;
+		}
 	}
 }
 
-.profile-box {
-  align-items: top;
-  width: 200px;
-  right: 40px;
-  .profile-name {
-    display: block;
-    padding-left: 10px;
-    font-size: 1.4rem;
-    font-weight: 500;
-  }
-}
-}
-
 @media (min-width: 768px) {
-  .dashboard-nav-btn {
-    display: none;
-  }
+	.dashboard-nav-btn {
+		display: none;
+	}
 
-  .dashboard-nav-box {
-    position: static;
-    width: 150px;
-  }
+	.dashboard-nav-box {
+		position: static;
+		width: 150px;
+	}
 
-  .logo-icon {
-    margin: 30px;
-  }
+	.logo-icon {
+		margin: 30px;
+	}
 
-  .profile-box {
-  top: 10px;
-  }
+	.profile-box {
+		top: 10px;
+	}
 
-  .todo-list {
-  margin-right: 50px;
-  }
+	.todo-list {
+		margin-right: 50px;
+	}
 }
 
 @media (min-width: 992px) {
-  .main-container {
-    display: flex;
-    flex-direction: row-reverse;
-	justify-content: space-between;
-  }
+	.main-container {
+		display: flex;
+		flex-direction: row-reverse;
+		justify-content: space-between;
+	}
 
-  .todo-list {
-  width: 100%;
-  }
+	.todo-list {
+		width: 100%;
+	}
 
-  .profile-box {
-	top: 0;
-right: 120px;
-  }
+	.profile-box {
+		top: 0;
+		right: 120px;
+	}
 
-  .calendar {
-	position: relative;
-	top: -90px;
-  }
+	.calendar {
+		position: relative;
+		top: -90px;
+	}
 }
 
 @media (min-width: 1200px) {
