--- a/src/sass/sign-form.scss
+++ b/src/sass/sign-form.scss
@@ -1,7 +1,14 @@
 @use './reset';
 @use './colors' as c;
 
+.token-error-img {
+ max-width: 100vw;
+}
+
 .sign-section {
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
     min-height: 60vh;
 }
 
@@ -33,6 +40,11 @@
 .switch-link {
     font-size: 1.4rem;
     color: #ffad84;
+}
+
+.recover-pwd-link {
+    color: rgb(105, 190, 66);
+    font-size: 1.4rem;
 }
 
 @media (min-width: 576px) {
